--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: CF-Bypass Desktop (Fix Install)
+name: CF-Bypass Desktop (Final Fix)
 on: 
   workflow_dispatch:
 
@@ -7,23 +7,37 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ubuntu:22.04
-      # 必须开启 privileged 权限
       options: --privileged --shm-size=2gb
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 1. 先安装基础工具 (确保 git, python, debconf 肯定能装上)
-      - name: Install Basic Tools
+      # 1. 补全所有缺失的系统组件
+      - name: Install System Dependencies
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
           apt-get update
-          # 关键：先安装 debconf-utils 才能执行后面的协议同意命令
-          apt-get install -y debconf-utils git wget curl net-tools python3 python3-pip sudo software-properties-common
+          # 安装基础工具、debconf、fontconfig(提供fc-cache)、以及Chrome需要的dbus等
+          apt-get install -y \
+            debconf-utils \
+            git \
+            wget \
+            curl \
+            net-tools \
+            python3 \
+            python3-pip \
+            sudo \
+            software-properties-common \
+            fontconfig \
+            dbus-x11 \
+            libnss3 \
+            libasound2 \
+            libgbm1 \
+            ca-certificates
 
-      # 2. 安装字体 (独立步骤，防止卡住其他包)
+      # 2. 安装字体 (独立步骤)
       - name: Install Fonts (Anti-Detect)
         env:
           DEBIAN_FRONTEND: noninteractive
@@ -31,27 +45,27 @@ jobs:
           # 预先同意微软字体协议
           echo "ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true" | debconf-set-selections
           
-          # 安装字体 (如果失败不阻断流程，加上 || true)
-          apt-get install -y ttf-mscorefonts-installer fonts-liberation || echo "Fonts warning (ignored)"
+          # 安装字体包
+          apt-get install -y ttf-mscorefonts-installer fonts-liberation fonts-noto-color-emoji || echo "Font install warning"
           
-          # 刷新缓存
+          # 现在 fc-cache 肯定存在了
           fc-cache -f -v
 
       # 3. 安装 Chrome 和 GUI 环境
-      - name: Install Chrome & GUI
+      - name: Install Chrome & GUI & DrissionPage
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
           apt-get install -y xvfb fluxbox x11vnc
           
-          # 下载并安装 Chrome
+          # 安装官方 Google Chrome
           wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           apt-get install -y ./google-chrome-stable_current_amd64.deb
           
-          # 安装 DrissionPage
+          # 安装 DrissionPage 及其依赖
           pip3 install DrissionPage
 
-      # 4. 安装 noVNC (现在 git 肯定好了)
+      # 4. 安装 noVNC
       - name: Install noVNC
         run: |
           git clone https://github.com/novnc/noVNC.git /opt/noVNC
@@ -60,6 +74,9 @@ jobs:
 
       - name: Start Virtual Desktop
         run: |
+          # 启动 DBUS (有些版本的 Chrome 需要它来保存设置)
+          service dbus start || true
+          
           Xvfb :99 -screen 0 1280x800x24 &
           export DISPLAY=:99
           fluxbox &
@@ -72,37 +89,29 @@ jobs:
           cat <<EOF > bypass.py
           from DrissionPage import ChromiumPage, ChromiumOptions
           import time
-          import os
-          
-          print("--- Initializing DrissionPage ---")
           
           co = ChromiumOptions()
-          # 关键参数：指向刚安装的官方 Chrome
           co.set_browser_path('/usr/bin/google-chrome') 
           co.set_argument('--no-sandbox')
           co.set_argument('--start-maximized')
           co.set_argument('--disable-gpu')
           co.set_user_data_path('/tmp/drission_profile')
           
-          # 伪装 Mac UA
+          # 模拟最新版 Mac Chrome
           co.set_user_agent('Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/121.0.0.0 Safari/537.36')
 
           try:
               page = ChromiumPage(addr_or_opts=co)
-              
+              # 替换成你的目标 URL
               target_url = "https://nowsecure.nl" 
               print(f"--- Navigating to {target_url} ---")
               page.get(target_url)
               
-              print("--- Page Loaded. Waiting for user interaction via VNC ---")
-              
-              # 这里不写复杂的自动点击，避免报错退出，直接由你在 VNC 操作
+              print("--- Ready. Please control via VNC. ---")
               while True:
                   time.sleep(10)
-                  
           except Exception as e:
               print(f"Error: {e}")
-              # 即使报错也不退出，保持 VNC 活着方便查看
               while True:
                   time.sleep(10)
           EOF
@@ -111,10 +120,10 @@ jobs:
         run: |
           export DISPLAY=:99
           
-          # 启动 Python 脚本
+          # 启动浏览器脚本
           python3 bypass.py > browser.log 2>&1 &
           
-          # 启动 Cloudflare Tunnel
+          # 启动隧道
           curl -L --output cloudflared.deb https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
           dpkg -i cloudflared.deb
           cloudflared tunnel --url http://localhost:6080 > tunnel.log 2>&1 &
@@ -124,15 +133,8 @@ jobs:
           
           TUNNEL_URL=$(grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log | head -1)
           
-          if [ -z "$TUNNEL_URL" ]; then
-             echo "Tunnel URL not found. Logs:"
-             cat tunnel.log
-          fi
-
           echo "=========================================================="
-          echo "🛡️ DrissionPage 浏览器环境已修复"
           echo "🔗 VNC 地址: $TUNNEL_URL/vnc.html?autoconnect=true&password=secret"
           echo "=========================================================="
           
-          # 监控日志
           tail -f browser.log
