--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,31 +1,31 @@
-name: Firefox Stealth VNC
+name: Firefox Non-Root VNC
 on: 
   workflow_dispatch:
 
 jobs:
-  firefox-desktop:
+  firefox-user:
     runs-on: ubuntu-latest
     container:
       image: ubuntu:22.04
-      # Firefox 需要 shm-size 防止崩溃
+      # 必须开启 privileged 以支持 fuse (虽然不用 snap，但为了底层库稳定)
       options: --privileged --shm-size=2gb
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 1. 安装基础工具 & 添加 Firefox PPA 源 (避开 Snap 坑)
-      - name: Install Firefox & GUI
+      # 1. 安装基础环境 (root 操作)
+      - name: Install System & Firefox
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
           apt-get update
-          apt-get install -y software-properties-common wget curl git net-tools sudo debconf-utils
+          apt-get install -y software-properties-common wget curl git net-tools sudo debconf-utils vim
           
-          # 添加 Mozilla PPA 以获取原生 .deb 包
+          # 添加 Mozilla PPA
           add-apt-repository -y ppa:mozillateam/ppa
           
-          # 设置优先级，确保不安装 Snap 版本
+          # 阻止 Snap 版本
           echo '
           Package: *
           Pin: release o=LP-PPA-mozillateam
@@ -33,32 +33,37 @@ jobs:
           ' | tee /etc/apt/preferences.d/mozilla-firefox
           
           apt-get update
-          # 安装 Firefox 和 常用中文字体/微软字体
-          apt-get install -y firefox fonts-liberation fonts-noto-color-emoji fontconfig ttf-mscorefonts-installer
+          # 安装 Firefox, VNC, 字体, PulseAudio(解决声音报错)
+          apt-get install -y firefox fonts-liberation fonts-noto-color-emoji fontconfig ttf-mscorefonts-installer xvfb fluxbox x11vnc python3 pulseaudio dbus-x11
           
-          # 安装 VNC 环境
-          apt-get install -y xvfb fluxbox x11vnc python3
-          
-          # 接受微软字体协议 (防止报错)
+          # 同意字体协议
           echo "ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true" | debconf-set-selections
-          # 重新配置字体
           fc-cache -f -v
-
-      # 2. 安装 noVNC
-      - name: Install noVNC
-        run: |
+          
+          # 安装 noVNC
           git clone https://github.com/novnc/noVNC.git /opt/noVNC
           git clone https://github.com/novnc/websockify /opt/noVNC/utils/websockify
           ln -s /opt/noVNC/vnc.html /opt/noVNC/index.html
-
-      # 3. 配置 Firefox 隐身 Profile (核心反爬)
-      - name: Configure Firefox Profile
-        run: |
-          # 创建 Profile 文件夹
-          mkdir -p /root/.mozilla/firefox/stealth.default
           
-          # 创建 profiles.ini 告诉 Firefox 使用这个目录
-          cat <<EOF > /root/.mozilla/firefox/profiles.ini
+          # 赋予 noVNC 目录权限，以便普通用户访问
+          chmod -R 777 /opt/noVNC
+
+      # 2. 创建普通用户并配置 Firefox (关键修复步骤)
+      - name: Setup User & Firefox Profile
+        run: |
+          # 创建一个叫 appuser 的用户，主目录在 /home/appuser
+          useradd -m -s /bin/bash appuser
+          
+          # 赋予 sudo 权限 (可选，调试用)
+          usermod -aG sudo appuser
+          echo "appuser ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
+          
+          # 以 appuser 身份创建配置目录
+          # 使用 su -c 确保文件归属正确
+          su appuser -c "mkdir -p /home/appuser/.mozilla/firefox/stealth.default"
+          
+          # 写入 profiles.ini
+          su appuser -c "cat <<EOF > /home/appuser/.mozilla/firefox/profiles.ini
           [Profile0]
           Name=default
           IsRelative=1
@@ -68,54 +73,75 @@ jobs:
           [General]
           StartWithLastProfile=1
           Version=2
-          EOF
+          EOF"
           
-          # 写入 user.js (Firefox 的高级配置)
-          # 这里的设置对应了 about:config 中的开关
-          cat <<EOF > /root/.mozilla/firefox/stealth.default/user.js
-          // === 核心反爬设置 ===
-          user_pref("dom.webdriver.enabled", false);           // 彻底关闭 WebDriver 标记
-          user_pref("use_automation_extension", false);        // 禁用自动化扩展支持
-          user_pref("general.useragent.override", "Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:120.0) Gecko/20100101 Firefox/120.0"); // 伪装 Win10
-          
-          // === 隐私与指纹 ===
-          user_pref("media.peerconnection.enabled", false);    // 禁用 WebRTC，防止 IP 泄露
-          user_pref("privacy.resistFingerprinting", false);    // 注意：有时候开启这个反而会被 CF 标记，先保持 false 模拟普通人
-          user_pref("network.http.sendRefererHeader", 2);      // 正常发送 Referer
-          
-          // === 性能与显示 ===
-          user_pref("browser.tabs.remote.autostart", true);
-          user_pref("gfx.webrender.all", false);               // 容器内禁用部分硬件加速防止黑屏
-          EOF
+          # 写入 user.js (反爬配置)
+          su appuser -c "cat <<EOF > /home/appuser/.mozilla/firefox/stealth.default/user.js
+          user_pref(\"dom.webdriver.enabled\", false);
+          user_pref(\"use_automation_extension\", false);
+          user_pref(\"general.useragent.override\", \"Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:120.0) Gecko/20100101 Firefox/120.0\");
+          user_pref(\"media.peerconnection.enabled\", false);
+          user_pref(\"privacy.resistFingerprinting\", false);
+          user_pref(\"gfx.webrender.all\", false);
+          EOF"
 
-      # 4. 启动桌面环境
-      - name: Start Virtual Desktop
+      # 3. 启动 VNC 和 桌面环境 (以 appuser 身份)
+      - name: Start Desktop (As User)
         run: |
-          # 启动 DBUS (Firefox 需要)
-          mkdir -p /var/run/dbus
-          dbus-daemon --system --fork
+          # 启动系统级 DBus (root运行)
+          service dbus start || true
           
-          Xvfb :99 -screen 0 1280x800x24 &
+          # 创建启动脚本 run_desktop.sh
+          cat <<EOF > /home/appuser/run_desktop.sh
+          #!/bin/bash
           export DISPLAY=:99
+          export HOME=/home/appuser
+          
+          # 启动 Xvfb
+          Xvfb :99 -screen 0 1280x800x24 &
+          sleep 2
+          
+          # 启动 Fluxbox
           fluxbox &
+          
+          # 启动 VNC Server
           x11vnc -display :99 -forever -passwd secret -bg -noxdamage
+          
+          # 启动 noVNC
           /opt/noVNC/utils/novnc_proxy --vnc localhost:5900 --listen 6080 &
+          EOF
+          
+          # 赋予脚本执行权限
+          chmod +x /home/appuser/run_desktop.sh
+          
+          # 以 appuser 身份运行桌面
+          su appuser -c "/home/appuser/run_desktop.sh"
+          
+          echo "Desktop started as appuser."
           sleep 3
 
-      # 5. 启动 Firefox 并建立隧道
+      # 4. 启动 Firefox (以 appuser 身份)
       - name: Launch Firefox & Tunnel
         run: |
+          # 创建浏览器启动脚本
+          cat <<EOF > /home/appuser/run_firefox.sh
+          #!/bin/bash
           export DISPLAY=:99
+          export HOME=/home/appuser
           
-          # 启动 Firefox (后台运行)
-          # --no-remote: 允许同时运行多个实例
-          # --new-instance: 确保启动新进程
-          nohup firefox --no-remote --new-instance "https://nowsecure.nl" > firefox.log 2>&1 &
+          # 启动 Firefox
+          nohup firefox --no-remote --new-instance "https://nowsecure.nl" > /home/appuser/firefox.log 2>&1 &
+          EOF
+          
+          chmod +x /home/appuser/run_firefox.sh
+          
+          # 以 appuser 身份运行
+          su appuser -c "/home/appuser/run_firefox.sh"
           
           echo "Firefox launching..."
           sleep 5
           
-          # 启动 Cloudflare Tunnel
+          # 启动 Tunnel (Tunnel 可以用 root 跑，只要它能访问 localhost:6080)
           curl -L --output cloudflared.deb https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
           dpkg -i cloudflared.deb
           cloudflared tunnel --url http://localhost:6080 > tunnel.log 2>&1 &
@@ -126,10 +152,9 @@ jobs:
           TUNNEL_URL=$(grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log | head -1)
           
           echo "=========================================================="
-          echo "🦊 Firefox 隐身版已就绪"
-          echo "👉 这个版本强制关闭了 webdriver 标记并伪装为 Windows"
+          echo "🦊 Firefox (User Mode) 已启动"
           echo "🔗 VNC 链接: $TUNNEL_URL/vnc.html?autoconnect=true&password=secret"
           echo "=========================================================="
           
-          # 保持运行
-          tail -f firefox.log
+          # 监控日志
+          tail -f /home/appuser/firefox.log
