--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,9 +1,9 @@
-name: Firefox Allowed-Ads VNC
+name: Manual IPA Download & Artifact
 on: 
   workflow_dispatch:
 
 jobs:
-  firefox-user:
+  ipa-downloader:
     runs-on: ubuntu-latest
     container:
       image: ubuntu:22.04
@@ -13,13 +13,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 1. 安装基础环境
-      - name: Install System & Firefox
+      # 1. 安装 Firefox, VNC, 和 zip 工具
+      - name: Install Environment
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
           apt-get update
-          apt-get install -y software-properties-common wget curl git net-tools sudo debconf-utils vim
+          apt-get install -y software-properties-common wget curl git net-tools sudo debconf-utils vim unzip
           
           add-apt-repository -y ppa:mozillateam/ppa
           
@@ -40,7 +40,7 @@ jobs:
           ln -s /opt/noVNC/vnc.html /opt/noVNC/index.html
           chmod -R 777 /opt/noVNC
 
-      # 2. 创建用户 & 配置“允许广告”的 Profile
+      # 2. 创建普通用户并配置 Firefox
       - name: Setup User & Firefox Profile
         run: |
           useradd -m -s /bin/bash appuser
@@ -53,44 +53,30 @@ jobs:
           IsRelative=1
           Path=stealth.default
           Default=1
-          
           [General]
           StartWithLastProfile=1
           Version=2
           EOF"
           
-          # 核心修改：写入允许广告和追踪的 user.js
+          # 写入允许广告和追踪的 user.js
           su appuser -c "cat <<EOF > /home/appuser/.mozilla/firefox/stealth.default/user.js
-          // 1. 基础反爬 (保持不变)
           user_pref(\"dom.webdriver.enabled\", false);
-          user_pref(\"use_automation_extension\", false);
           user_pref(\"general.useragent.override\", \"Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:120.0) Gecko/20100101 Firefox/120.0\");
-          
-          // 2. 必须禁用的隐私保护 (修复 AdBlock 检测)
-          // 关闭增强跟踪保护
           user_pref(\"privacy.trackingprotection.enabled\", false);
-          user_pref(\"privacy.trackingprotection.pbmode.enabled\", false);
-          user_pref(\"privacy.trackingprotection.socialtracking.enabled\", false);
-          user_pref(\"privacy.trackingprotection.cryptomining.enabled\", false);
-          user_pref(\"privacy.trackingprotection.fingerprinting.enabled\", false);
-          
-          // 允许所有 Cookie (很多广告依赖第三方 Cookie)
-          user_pref(\"network.cookie.cookieBehavior\", 0); // 0 = Accept all
-          user_pref(\"network.cookie.thirdparty.sessionOnly\", false);
-          
-          // 3. 其他可能触发检测的设置
-          user_pref(\"dom.popup_allowed_events\", \"change click dblclick mouseup notificationclick reset submit touchend\"); 
-          user_pref(\"dom.disable_open_during_load\", false); // 允许弹窗 (有些广告是弹窗)
-          
-          // 4. 保持 WebRTC 关闭 (防止 IP 泄露，如果广告一定需要 WebRTC 才能加载，这里可能需要改回 true)
+          user_pref(\"network.cookie.cookieBehavior\", 0);
           user_pref(\"media.peerconnection.enabled\", false);
           EOF"
+          
+          # 创建下载目录
+          su appuser -c "mkdir -p /home/appuser/Downloads"
 
-      # 3. 启动桌面
-      - name: Start Desktop (As User)
+      # 3. 启动桌面和 Firefox
+      - name: Start Desktop & Firefox
         run: |
+          # 启动系统服务
           service dbus start || true
           
+          # 创建并运行桌面启动脚本
           cat <<EOF > /home/appuser/run_desktop.sh
           #!/bin/bash
           export DISPLAY=:99
@@ -101,28 +87,23 @@ jobs:
           x11vnc -display :99 -forever -passwd secret -bg -noxdamage
           /opt/noVNC/utils/novnc_proxy --vnc localhost:5900 --listen 6080 &
           EOF
-          
           chmod +x /home/appuser/run_desktop.sh
           su appuser -c "/home/appuser/run_desktop.sh"
-          sleep 3
-
-      # 4. 启动 Firefox
-      - name: Launch Firefox & Tunnel
-        run: |
+          
+          # 创建并运行浏览器启动脚本
           cat <<EOF > /home/appuser/run_firefox.sh
           #!/bin/bash
           export DISPLAY=:99
           export HOME=/home/appuser
-          # 替换成你的目标网址
-          nohup firefox --no-remote --new-instance "https://decrypt.day/app/id1489932710/" > /home/appuser/firefox.log 2>&1 &
+          # 打开目标 URL
+          firefox --no-remote --new-instance "https://decrypt.day/app/id1489932710" &
           EOF
-          
           chmod +x /home/appuser/run_firefox.sh
           su appuser -c "/home/appuser/run_firefox.sh"
-          
-          echo "Firefox launching..."
-          sleep 5
-          
+
+      # 4. 启动隧道并显示链接
+      - name: Start Tunnel & Show Link
+        run: |
           curl -L --output cloudflared.deb https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
           dpkg -i cloudflared.deb
           cloudflared tunnel --url http://localhost:6080 > tunnel.log 2>&1 &
@@ -130,11 +111,70 @@ jobs:
           echo "Waiting for Tunnel..."
           sleep 10
           
-          TUNNEL_URL=$(grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log | head -1)
+          TUNNEL_URL=$(grep -oE "https://[a-zA-Z0.9-]+\.trycloudflare\.com" tunnel.log | head -1)
           
           echo "=========================================================="
-          echo "🦊 Firefox (Ad-Friendly Mode) 已启动"
+          echo "✅ 环境就绪, 请开始手动操作"
           echo "🔗 VNC 链接: $TUNNEL_URL/vnc.html?autoconnect=true&password=secret"
+          echo "⏳ 等待下载 IPA 文件中... (超时时间 15 分钟)"
           echo "=========================================================="
           
-          tail -f /home/appuser/firefox.log
+      # 5. [核心] 监控下载并验证
+      - name: Monitor for IPA Download
+        id: monitor_download # 给这一步一个ID，方便后面引用它的输出
+        run: |
+          # 设置超时时间 (180 次 * 5 秒 = 900 秒 = 15 分钟)
+          TIMEOUT=180
+          COUNT=0
+          
+          echo "Monitoring /home/appuser/Downloads for an IPA file..."
+          
+          while [ $COUNT -lt $TIMEOUT ]; do
+            # 以 appuser 身份查找文件
+            # -maxdepth 1: 只在当前目录查找
+            # -size -100M: 小于 100MB
+            IPA_FILE=$(su appuser -c 'find /home/appuser/Downloads -maxdepth 1 -type f -name "*.ipa" -size -100M' | head -n 1)
+            
+            if [ -n "$IPA_FILE" ]; then
+              echo "✅ Found potential IPA file: $IPA_FILE"
+              echo "Checking file integrity..."
+              
+              # IPA 是 zip 格式，用 unzip -t 测试完整性
+              # -t: test, -qq: quiet quiet (无输出除非报错)
+              if unzip -tqq "$IPA_FILE"; then
+                echo "✅ File integrity confirmed. Download complete."
+                # 将文件路径输出，供下一步使用
+                echo "ipa_path=$IPA_FILE" >> $GITHUB_OUTPUT
+                exit 0
+              else
+                echo "❌ File is corrupted or still downloading. Retrying..."
+              fi
+            fi
+            
+            sleep 5
+            COUNT=$((COUNT + 1))
+          done
+          
+          echo "❌ Timed out after 15 minutes. No valid IPA file was downloaded."
+          exit 1
+          
+      # 6. 上传产物
+      - name: Upload IPA Artifact
+        if: success() # 只有在 monitor 成功时才运行
+        uses: actions/upload-artifact@v4
+        with:
+          name: downloaded-ipa # 产物的名字
+          path: ${{ steps.monitor_download.outputs.ipa_path }} # 使用上一步输出的文件路径
+          retention-days: 1 # 产物保留1天
+
+      # 7. 清理 (无论成功失败都执行)
+      - name: Cleanup Processes
+        if: always()
+        run: |
+          echo "Cleaning up background processes..."
+          # 强制杀死所有相关进程
+          pkill -f firefox || true
+          pkill -f x11vnc || true
+          pkill -f Xvfb || true
+          pkill -f fluxbox || true
+          echo "Cleanup complete."
